_k8s/config-store.yaml

apiVersion: v1
kind: Service
metadata:
  name: config-store-svc
  labels:
    app: config-store
spec:
  selector:
    app: config-store
  ports:
    - port: 9000
      protocol: TCP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-store
  labels:
    app: config-store
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-store
  template:
    metadata:
      labels:
        app: config-store
        version: v1
    spec:
      serviceAccountName: config-store
      containers:
      - name: config-store
        image: putstack/config-store
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9000
